--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,9 +11,10 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - certs:/etc/nginx/certs
-      - vhostd:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
+      - /data/nginx/conf.d:/etc/nginx/conf.d
+      - /data/nginx/vhost.d:/etc/nginx/vhost.d
+      - /data/nginx/html:/usr/share/nginx/html
+      - /data/nginx/certs:/etc/nginx/certs:ro
       - /var/run/docker.sock:/tmp/docker.sock:ro
 
   letsencrypt:
@@ -21,12 +22,14 @@ services:
     container_name: 'letsencrypt'
     restart: always
     environment:
-      - NGINX_PROXY_CONTAINER=proxy   
+      - NGINX_DOCKER_GEN_CONTAINER=proxy
+      - NGINX_PROXY_CONTAINER=proxy
       - DEFAULT_EMAIL=underpenguin424@gmail.com
     volumes:
-      - certs:/etc/nginx/certs
-      - vhostd:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
+      - /data/nginx/conf.d:/etc/nginx/conf.d
+      - /data/nginx/vhost.d:/etc/nginx/vhost.d
+      - /data/nginx/html:/usr/share/nginx/html
+      - /data/nginx/certs:/etc/nginx/certs:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
 
   underpenguin:
@@ -71,11 +74,3 @@ networks:
   default:
     external:
       name: nginx-proxy
-
-
-
-volumes:
-  certs:
-  vhostd:
-  html:
-
